@@ -43,5 +43,6 @@ setup(name='intranett.policy',
       ],
       entry_points="""
       [zopectl.command]
+      create_site = intranett.policy.commands:create_site
       upgrade = intranett.policy.commands:upgrade
       """)
