@@ -4,6 +4,9 @@ Changelog
 1.1 - unreleased
 ----------------
 
+- Added a new `create_site` zopectl command. It has a `--force` option to
+  overwrite an existing site.
+  [hannosch]
 
 1.0 - 2010-12-04
 ----------------
